# ENC424J600

./: Cargo.toml  README.md  memory.x  openocd.gdb  shell.nix
.cargo/: config
examples/: tcp_stm32f407.rs  tx_stm32f407.rs
nix/: channel-rust-nightly.toml  itm-cargo-lock.patch  itm-tools.nix  itm.nix  rustPlatform.nix  tmux.sh
src/: lib.rs  rx.rs  smoltcp_phy.rs  spi.rs  tx.rs
