[package]
categories = ["embedded", "no-std"]
name = "enc424j600"
description = "Embbeded Rust Ethernet driver for ENC424J600 Ethernet controller with SPI interface, compatible with STM32F4xx"
authors = ["Harry Ho <hh@m-labs.hk>"]
version = "0.1.0"
keywords = ["ethernet", "eth", "enc424j600", "stm32", "stm32f4xx"]
repository = "https://github.com/smoltcp-rs/ENC424J600"
edition = "2018"

[dependencies]
volatile-register = "0.2"
aligned = "0.3"
embedded-hal = "0.2"
stm32f4xx-hal = { version = "0.8" , optional = true }
smoltcp = { version = "0.6.0", default-features = false, features = ["proto-ipv4", "proto-ipv6", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose", "ethernet"], optional = true }
log = { version = "0.4", optional = true }
cortex-m-rtic = { version = "0.5.3", optional = true }

[features]
smoltcp-phy = ["smoltcp"]
smoltcp-phy-all = [
    "smoltcp/socket-raw", "smoltcp/socket-udp", "smoltcp/socket-tcp",
    "smoltcp/proto-ipv4", "smoltcp/proto-ipv6"
]
stm32f4 = ["stm32f4xx-hal"]
stm32f407 = ["stm32f4xx-hal/stm32f407"]
tx_stm32f407 = ["stm32f407", "log", "cortex-m-rtic"]
tcp_stm32f407 = ["stm32f407", "smoltcp-phy-all", "smoltcp/log", "log", "cortex-m-rtic"]
default = []

[dev-dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
panic-itm = "0.4"

[[example]]
name = "tx_stm32f407"
required-features = ["tx_stm32f407"]

[[example]]
name = "tcp_stm32f407"
required-features = ["tcp_stm32f407"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
