[package]
categories = ["embedded", "no-std"]
name = "enc424j600"
description = "Embbeded Rust Ethernet driver for ENC424J600 Ethernet controller with SPI interface, compatible with STM32F4xx"
authors = ["Harry Ho <hh@m-labs.hk>"]
version = "0.1.0"
keywords = ["ethernet", "eth", "enc424j600", "stm32", "stm32f4xx"]
repository = "https://github.com/smoltcp-rs/ENC424J600"
edition = "2018"

[dependencies]
volatile-register = "0.2"
aligned = "0.3"
embedded-hal = "0.2"
smoltcp = { version = "0.6.0", default-features = false, features = ["proto-ipv4", "proto-ipv6", "socket-icmp", "socket-udp", "socket-tcp", "log", "verbose", "ethernet"], optional = true }
# Optional dependencies for building examples
stm32f4xx-hal = { version = "0.8", optional = true }
cortex-m = { version = "0.5", optional = true }
cortex-m-rt = { version = "0.6", optional = true }
panic-itm = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }

[features]
smoltcp-phy = ["smoltcp"]
smoltcp-phy-all = [
    "smoltcp/socket-raw", "smoltcp/socket-udp", "smoltcp/socket-tcp",
    "smoltcp/proto-ipv4", "smoltcp/proto-ipv6"
]
# Example-based features
tx_stm32f407 = ["stm32f4xx-hal/stm32f407", "cortex-m", "cortex-m-rt", "panic-itm", "log"]
tcp_stm32f407 = ["stm32f4xx-hal/stm32f407", "cortex-m", "cortex-m-rt", "smoltcp-phy-all", "smoltcp/log", "panic-itm", "log"]
default = []

[[example]]
name = "tx_stm32f407"
required-features = ["tx_stm32f407"]

[[example]]
name = "tcp_stm32f407"
required-features = ["tcp_stm32f407"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
opt-level = "s"
lto = true
